Color animation: Fix overflow-x: scoll effect

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,7 +10,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+	align-items: center;
+	overflow-x: hidden;
 
     .game-title {
         padding-top: 30px;
